combining and set up of whole website

--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -8,36 +8,34 @@
     <meta name="description" content="Lazy Load Gallery">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
-    <link rel="shortcut icon" href="images8/faviconsun(1).ico">
-    <!-- STYLE SHEETS -->
+    <link rel="shortcut icon" href="siteimages/faviconsun(1).ico">
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
-    <link rel="stylesheet" href="wk8css/small.css">
-    <link rel="stylesheet" href="wk8css/medium.css">
-    <link rel="stylesheet" href="wk8css/large.css">
-    <!-- font -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap"
-        rel="stylesheet">
-
+    <link rel="stylesheet" href="main.css/small.css">
+    <link rel="stylesheet" href="main.css/med.css">
+    <link rel="stylesheet" href="main.css/formlarge.css">
+   
+    
 </head>
 
 <body>
+    <div id="pancake">Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion. </div>
     <header>
-        <picture><a href="/lesson9/index.html"><img src="/lesson8/images8/Logosmall.png" alt="sunshine and clouds"></a> </picture>
+        <picture><a href="index.html"><img src="siteimages/Logosmall.png" alt="sunshine and clouds"></a> </picture>
         <section class="headings">
             <h1> Outside Weather </h1>
-            <div>Accurate, to help YOU plan ahead</div>
+            <div>Accurate to help you plan ahead</div>
         </section>
     </header>
     <nav>
         <ul class="navigation">
             <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-            <li><a href="/lesson10/preston-10.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li class="active"><a href="/lesson8/stormcenter.html">Storm Center</a></li>
-            <li class="#"><a href="/lesson7/gallery7.html">Gallery</a></li>
-            <li><a href="/lesson9/index.html">Home</a></li>
+            <li><a href="preston.html">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li class="active"><a href="stormcenter.html">Storm Center</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            
         </ul>
     </nav>
     <main>
@@ -130,7 +128,11 @@
         </p>
 
     </footer>
-    <script src="/lesson8/main.js/storm.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src="site.js/main.js"></script>
+    <script src="site.js/forecast.js"></script> 
+    <script src="site.js/windchill.js"></script>
+
 
 </body>
 
