--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="siteimages/faviconsun(1).ico">
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
-    <link rel="stylesheet" href="/lesson11/main.css/small.css">
-    <link rel="stylesheet" href="/lesson11/main.css/med.css">
-    <link rel="stylesheet" href="/lesson11/main.css/lg.css">
+    <link rel="stylesheet" href="main.css/small.css">
+    <link rel="stylesheet" href="main.css/med.css">
+    <link rel="stylesheet" href="main.css/homelarge.css">
     
 
 </head>
@@ -33,7 +33,7 @@
             <li><a href="preston.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
-            <li><a href="gallery7.html">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
             
         </ul>
     </nav>
