created fish haven and soda springs connect links

--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -22,16 +22,16 @@
         <picture><a href="index.html"><img src="siteimages/Logosmall.png" alt="sunshine and clouds"></a> </picture>
         <section class="headings">
             <h1> Outside Weather </h1>
-            <div>Accurate to help you plan ahead</div>
+            <div>Accurate, to help YOU plan ahead</div>
         </section>
     </header>
     <nav>
         <ul class="navigation">
             <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Fish Haven</a></li>
+            <li><a href="fishaven.html">Fish Haven</a></li>
             <li class="active"><a href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
+            <li><a href="sodasprings.html">Soda Springs</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             
