--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -39,7 +39,7 @@
         </ul>
     </nav>
     <main>
-        <h1> Report significant weather</h1>
+        <h1> Report Significant Weather</h1>
         <form method="get" action="thanks.html">
             <fieldset>
                 <legend>Personal Information</legend>
