separated and debugged js. &normalize css

--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
     <link rel="shortcut icon" href="siteimages/faviconsun(1).ico">
-    <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
+    <link rel="stylesheet" href="main.css/normalize.css">
     <link rel="stylesheet" href="main.css/small.css">
     <link rel="stylesheet" href="main.css/med.css">
     <link rel="stylesheet" href="main.css/formlarge.css">
