--- a/lesson11/fishaven.html
+++ b/lesson11/fishaven.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Weather website home page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="siteimages/faviconsun(1).ico">
-    <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
+    <link rel="stylesheet" href="main.css/normalize.css">
     <link rel="stylesheet" href="main.css/small.css">
     <link rel="stylesheet" href="main.css/med.css">
     <link rel="stylesheet" href="main.css/homelarge.css">
