--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Weather website home page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="siteimages/faviconsun(1).ico">
-    <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
+    <link rel="stylesheet" href="main.css/normalize.css">
     <link rel="stylesheet" href="main.css/small.css">
     <link rel="stylesheet" href="main.css/med.css">
     <link rel="stylesheet" href="main.css/homelarge.css">
@@ -78,7 +78,8 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="site.js/main.js"></script>
-    <script src="site.js/weatherapi.js"></script>
+    <script src="site.js/towninfo.js"></script>
+    
     
 </body>
 
