--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
     <link rel="shortcut icon" href="siteimages/faviconsun(1).ico">
-    <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
+    <link rel="stylesheet" href="main.css/normalize.css">
     <link rel="stylesheet" href="main.css/small.css">
     <link rel="stylesheet" href="main.css/med.css">
     <link rel="stylesheet" href="main.css/formlarge.css">
@@ -130,9 +130,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="site.js/main.js"></script>
-    <script src="site.js/forecast.js"></script> 
-    <script src="site.js/windchill.js"></script>
-
+   
 
 </body>
 
