--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -170,6 +170,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="site.js/main.js"></script>
 <script src="site.js/weatherapi.js"></script>
+<script src="site.js/sodaSprings.js"></script>
 
 </body>
 
