--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -19,7 +19,7 @@
 <body>
     <div id="pancake">Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion. </div>
     <header>
-        <picture><a href="index.html"><img src="siteimages/Logosmall.png" alt="sunshine and clouds"></a> </picture>
+        <a href="index.html"><picture><img src="siteimages/Logosmall.png" alt="sunshine and clouds"> </picture></a>
         <section class="headings">
             <h1> Outside Weather </h1>
             <div>Accurate, to help YOU plan ahead</div>
@@ -62,7 +62,7 @@
         <div class="forecast">
             <div class="flex-col">
                 <span id="day1" class="day"></span>
-                <img src="" id="icon1"alt= "sun">
+                <img src="" id="icon1" alt= "sun">
                 <span id="high1" class="temp"></span>
             </div>
             <div class="flex-col">
