--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -20,7 +20,7 @@
 <body>
     <div id="pancake">Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion. </div>
     <header>
-        <picture><a href="index.html"><img src="siteimages/Logosmall.png" alt="sunshine and clouds"></a> </picture>
+        <a href="index.html"><picture><img src="siteimages/Logosmall.png" alt="sunshine and clouds"> </picture></a>
         <section class="headings">
             <h1> Outside Weather </h1>
             <div>Accurate, to help YOU plan ahead</div>
