--- a/lesson11/fishaven.html
+++ b/lesson11/fishaven.html
@@ -63,27 +63,27 @@
             <div class="forecast">
                 <div class="flex-col">
                     <span id="day1" class="day"></span>
-                    <img src="" id="icon1" alt= "sun">
+                    <img src="#" id="icon1" alt= "sun">
                     <span id="high1" class="temp"></span>
                 </div>
                 <div class="flex-col">
                     <span id="day2" class="day"></span>
-                    <img src="" id="icon2" alt= "sun">
+                    <img src="#" id="icon2" alt= "sun">
                     <span id="high2" class="temp"></span>
                 </div>
                 <div class="flex-col">
                     <span id="day3" class="day"></span>
-                    <img src="" id="icon3" alt= "sun">
+                    <img src="#" id="icon3" alt= "sun">
                     <span id="high3" class="temp"></span>
                 </div>
                 <div class="flex-col">
                     <span id="day4" class="day"></span>
-                    <img src="" id="icon4" alt= "sun">
+                    <img src="#" id="icon4" alt= "sun">
                     <span id="high4" class="temp"></span>
                 </div>
                 <div class="flex-col">
                     <span id="day5" class="day"></span>
-                    <img src="" id="icon5" alt= "sun">
+                    <img src="#" id="icon5" alt= "sun">
                     <span id="high5" class="temp"></span>
                 </div>
                 
