setting up js for upcoming event

--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -56,7 +56,11 @@
                 <div class="contentbox"><span id="wind"> </span> mph</div><!--wind-->
             </div>
         </section>
-       <div id=pEvents></div>
+       <div class="upEvents">
+           <h2>Upcoming Events</h2>
+           <div id=pEvents></div>
+
+       </div>
         <section class="section2">
             <h2> 5 Day Forecast</h2>
             <div class="forecast">
