--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -56,7 +56,11 @@
             <div class="contentbox"><span id="wind"> </span> mph</div><!--wind-->
         </div>
     </section>
-    <div id="sEvents"></div>
+    <div class="eventInfo">
+        <h2>Upcoming Events</h2>
+        
+
+    </div>
     <section class="section2">
         <h2> 5 Day Forecast</h2>
         <div class="forecast">
@@ -169,7 +173,6 @@
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="site.js/main.js"></script>
-<script src="site.js/weatherapi.js"></script>
 <script src="site.js/sodaSprings.js"></script>
 
 </body>
