--- a/lesson11/fishaven.html
+++ b/lesson11/fishaven.html
@@ -57,7 +57,11 @@
                 <div class="contentbox"><span id="wind"> </span> mph</div><!--wind-->
             </div>
         </section>
-        <div id="fEvents"></div>
+        <div class="upEvents">
+            <h2>Upcoming Events</h2>
+            <div id=fEvents></div>
+ 
+        </div>
         <section class="section2">
             <h2> 5 Day Forecast</h2>
             <div class="forecast">
@@ -172,7 +176,7 @@
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="site.js/main.js"></script>
-<script src="site.js/weatherapi.js"></script>
+
 <script src="site.js/fishHaven.js"></script>
 
 </body>
