finish upcoming event js. css + unicode

--- a/lesson11/fishaven.html
+++ b/lesson11/fishaven.html
@@ -57,9 +57,9 @@
                 <div class="contentbox"><span id="wind"> </span> mph</div><!--wind-->
             </div>
         </section>
-        <div class="upEvents">
-            <h2>Upcoming Events</h2>
-            <div id=fEvents></div>
+        <div id="event-info">
+            <h2>&#9889; Upcoming Events</h2>
+            
  
         </div>
         <section class="section2">
