--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -56,9 +56,9 @@
                 <div class="contentbox"><span id="wind"> </span> mph</div><!--wind-->
             </div>
         </section>
-       <div class="upEvents">
-           <h2>Upcoming Events</h2>
-           <div id=pEvents></div>
+        <div id="event-info">
+            <h2>&#9889; Upcoming Events</h2>
+          
 
        </div>
         <section class="section2">
@@ -100,7 +100,7 @@
             <h2>Preston Organic Dairy</h2>
             <h4>by NECIA P. SEAMONS Preston Citizen</h4>
             <img id="articleimg" src="siteimages/cow.jpg"
-            alt="beach fire at night two people sitting">
+            alt="cow">
             
                 <p>PRESTON — At a time when dairies are sharpening their pencils to stay in business 
                 and others are simply selling their herds, Jordan and Mandy Darrington have started up 
