--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -56,8 +56,9 @@
             <div class="contentbox"><span id="wind"> </span> mph</div><!--wind-->
         </div>
     </section>
-    <div class="eventInfo">
-        <h2>Upcoming Events</h2>
+    <div id="event-info">
+        <h2>&#9889; Upcoming Events</h2>
+        
         
 
     </div>
