reactivate commented out js.

--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -167,9 +167,9 @@
                             </footer>
                             
                             <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-                            <!-- Write your comments here <script src="site.js/main.js"></script>
+                              <script src="site.js/main.js"></script>
                             <script src="site.js/forecast.js"></script> 
-                            <script src="site.js/windchill.js"></script>-->
+                            <script src="site.js/windchill.js"></script>
     
 
                         </body>
