--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -169,6 +169,7 @@
     <p> &copy; 2020 | Heidi Fairhurst | Montana |<a class="links" href="https://hcfairhurst.github.io/"> Assignment
             Portal</a>|
         <span id="todaysDate"></span>
+        <p class="tribute"><a href="https://openweathermap.org/">Weather Info Powered by: OpenWeather</a></p>
     </p>
 
 </footer>
