typo on fish haven and set for site plan next week

--- a/lesson11/fishaven.html
+++ b/lesson11/fishaven.html
@@ -98,7 +98,7 @@
             
         </section>
         <section class="section3">
-            <h2>Paradise for Residence</h2>
+            <h2>Paradise for Residents</h2>
             <h4>by Kurt Friedemann</h4>
             <img id="articleimg" src="siteimages/fishhaven.jpg"
             alt="beach fire at night two people sitting">
