finished site link to portal

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li>Lesson 08: <a href= "lesson8/tablebuild.html">Tablebuild</a> | <a href= "/lesson8/stormcenter.html"> Storm Center</a></li>
                 <li>Lesson 09: <a href= "lesson9/prophets.html">Prophets</a> | <a href= "/lesson9/index.html">Weather Site Home Page </a></li>
                 <li>Lesson 10: <a href= "lesson10/preston-10.html">Weather API</a> | <a href= "/lesson10/preston-10.html">API Weather Summary & Forecast </a></li>
-                <li>Lesson 11: <a href= "lesson11/index.html">Weather site critique</a> | <a href= "#">Fish Have & Soda springs</a></li>
+                <li>Lesson 11: <a href= "lesson11/index.html">Full Site</a></li>
             </ul>
         </nav>
     </main>
