js windchill fix and alt fix

--- a/lesson11/fishaven.html
+++ b/lesson11/fishaven.html
@@ -101,7 +101,7 @@
             <h2>Paradise for Residents</h2>
             <h4>by Kurt Friedemann</h4>
             <img id="articleimg" src="siteimages/fishhaven.jpg"
-            alt="beach fire at night two people sitting">
+            alt="hands holding a fish">
             
                 <p>FISH HAVEN, Idaho — It's an undiscovered paradise. Most people who drive by recognize the raw beauty of a place ringed by high desert mountains and bordered by the shores of a vast natural lake.
 
@@ -178,9 +178,8 @@
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="site.js/main.js"></script>
-
 <script src="site.js/fishHaven.js"></script>
-
+<script src="site.js/forecast.js"></script> 
 </body>
 
 
