--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -44,7 +44,7 @@
             <source media="(min-width: 250px) and (max-width: 500px)" srcset="siteimages/sodaSpringshero500.jpg">
             <source media="(min-width: 501px) and (max-width: 799px)" srcset="siteimages/sodaSpringshero700.jpg"> 
            <source media="(min-width: 800px)" srcset= "siteimages/sodaSpringshero1000.jpg">  
-             <img id="heroimg" src="siteimages/sodaSpringshero1000.jpg" alt="green rolling hills">
+             <img id="heroimg" src="siteimages/sodaSpringshero1000.jpg" alt="steaming orange hotsprings">
         </picture>  
         <div class="weatherSum">
             
@@ -176,7 +176,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="site.js/main.js"></script>
 <script src="site.js/sodaSprings.js"></script>
-
+<script src="site.js/forecast.js"></script> 
 </body>
 
 
