--- a/lesson11/fishaven.html
+++ b/lesson11/fishaven.html
@@ -179,7 +179,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="site.js/main.js"></script>
 <script src="site.js/fishHaven.js"></script>
-<script src="site.js/forecast.js"></script> 
+<script src="site.js/windchill.js"></script> 
 </body>
 
 
