--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -176,7 +176,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="site.js/main.js"></script>
 <script src="site.js/sodaSprings.js"></script>
-<script src="site.js/forecast.js"></script> 
+<script src="site.js/windchill.js"></script> 
 </body>
 
 
