--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li>Lesson 09: <a href= "lesson9/prophets.html">Prophets</a> | <a href= "/lesson9/index.html">Weather Site Home Page </a></li>
                 <li>Lesson 10: <a href= "lesson10/preston-10.html">Weather API</a> | <a href= "/lesson10/preston-10.html">API Weather Summary & Forecast </a></li>
                 <li>Lesson 11: <a href= "lesson11/index.html">Full Site</a></li>
+                <li>Lesson 12: <a href= "start_here/index.html">Sass Css preprocessor</a></li>
             </ul>
         </nav>
     </main>
