set up of website plan

--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -8,22 +8,24 @@
     <meta name="description" content="Weather home page for cit 230">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
-    <link rel="stylesheet" href="wk-3.css/small.css">
-    <link rel="stylesheet" href="wk-3.css/medium.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap" rel="stylesheet">
-    <script src="wk-3.js"></script>
+    <link rel="stylesheet" href="main-css/small.css">
+    <link rel="stylesheet" href="main-css/medium.css">
+    <link href="https://fonts.googleapis.com/css2?family=Galada&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Galada&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    
 </head>
 
 <body>
     <header>
-       
-        <h1> outsideWeather.com </h1>
+       <picture><img src="/lesson12/images/motorcycle.png" alt="green scooter"></picture>
+        <h1> Scoots.com </h1>
         <h3>Site Plan</h3>
         <div>
             <nav>
-                <ul>
+                <ul class="navigation">
+                    <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="target-audience.html">Target Audience</a></li>
+                    <li><a href="target.html">Target Audience</a></li>
                     <li><a href="colorscheme.html">Color Scheme</a></li>
                     <li><a href="typography.html">Typography</a></li>
                     </ul>
@@ -31,22 +33,22 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="sky">
     <h4>Site Description</h4>
-    <p>This site plan is to explain the purpose
-        and targeted audience for SpeedyGonzalasRentals.com We will
+    <p >This site plan is to explain the purpose
+        and targeted audience for Scoots.com. We will
         share specific consumer scenarios, website structure
         and user interface organization. We will also coordinate
         relevant design and web page style.</p>
     </section>
-    <section>
+    <section class="yellow">
     <h4>Site Name</h4>
-    <p>The name chosen for this site is Speedy SpeedyGonzalasRentals.com .
+    <p >The name chosen for this site is Scoots.com .
         It will be a resource for scooter, ATV and Jeep rentals. It will also provide local information on where to ride vehicles.
          It will highlight business locations designated by
-        the assignment.</p>
+        the assignment as well as prices.</p>
     </section>
-    <section>
+    <section class="orange">
     <H4>Mission Statement</H4>
     <p>The objective of our site is to provide tourist information and access to our rental business that is easy
         and understandable.</p>
@@ -54,9 +56,10 @@
     </main>
     <footer>
 
-        &copy; 2020 | Heidi Fairhurst | Montana | <a class="links" href="https://hcfairhurst.github.io/">Assignment Portal</a>
+            &copy; 2020 | Heidi Fairhurst | Montana  <span id="todaysDate"></span>
 
     </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
