--- a/lesson12/typography.html
+++ b/lesson12/typography.html
@@ -8,9 +8,10 @@
     <meta name="description" content="Weather home page for cit 230">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
-    <link rel="stylesheet" href="wk-3.css/small.css">
-    <link rel="stylesheet" href="wk-3.css/medium.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main-css/small.css">
+    <link rel="stylesheet" href="main-css/medium.css">
+    <link href="https://fonts.googleapis.com/css2?family=Galada&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Galada&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="wk-3.js"></script>
 </head>
 
