finished up of web site plan

--- a/lesson12/target.html
+++ b/lesson12/target.html
@@ -24,7 +24,7 @@
                 <ul class="navigation">
                     <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="target-audience.html">Target Audience</a></li>
+                    <li><a href="target.html">Target Audience</a></li>
                     <li><a href="colorscheme.html">Color Scheme</a></li>
                     <li><a href="typography.html">Typography</a></li>
                    
@@ -103,6 +103,9 @@
             </ul>
         </section>
     </main>
+    <footer>
+        &copy; 2020 | Heidi Fairhurst | Montana  <span id="todaysDate"></span>
+    </footer>
     <script src="main.js"></script>
 </body>
 
