--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -7,10 +7,10 @@
     <title>Outside Weather</title>
     <meta name="description" content="Weather home page for cit 230">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon (1).ico">
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
     <link rel="stylesheet" href="main-css/small.css">
     <link rel="stylesheet" href="main-css/medium.css">
-    <link href="https://fonts.googleapis.com/css2?family=Galada&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Galada&family=Roboto:wght@300&display=swap" rel="stylesheet">
     
 </head>
@@ -28,6 +28,7 @@
                     <li><a href="target.html">Target Audience</a></li>
                     <li><a href="colorscheme.html">Color Scheme</a></li>
                     <li><a href="typography.html">Typography</a></li>
+                    <li><a href="sitemap.html">Sitemap & Wireframes</a></li>
                     </ul>
             </nav>
         </div>
