--- a/lesson12/typography.html
+++ b/lesson12/typography.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="main-css/medium.css">
     <link href="https://fonts.googleapis.com/css2?family=Galada&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Galada&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <script src="wk-3.js"></script>
+   
 </head>
 
 <body>
@@ -26,6 +26,7 @@
                     <li><a href="target.html">Target Audience</a></li>
                     <li><a href="colorscheme.html">Color Scheme</a></li>
                     <li><a href="typography.html">Typography</a></li>
+                    <li><a href="sitemap.html">Sitemap & Wireframes</a></li>
                     
                 </ul>
             </nav>
