--- a/lesson12/sitemap.html
+++ b/lesson12/sitemap.html
@@ -25,7 +25,7 @@
                     <li><a href="target.html">Target Audience</a></li>
                     <li><a href="colorscheme.html">Color Scheme</a></li>
                     <li><a href="typography.html">Typography</a></li>
-                    <li><a href="sitemap.html">Sitemap & Wireframes</a></li>
+                    <li><a href="sitemap.html">Sitemap </a></li>
 
                 </ul>
             </nav>
