set up for homepage of scoots

--- a/lesson12/target.html
+++ b/lesson12/target.html
@@ -7,6 +7,7 @@
     <title>Outside Weather</title>
     <meta name="description" content="Weather home page for cit 230">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon(1).ico">
     <link rel="stylesheet" href="../lesson2/wk2-css.css/normalize.css">
     <link rel="stylesheet" href="main-css/small.css">
     <link rel="stylesheet" href="main-css/medium.css">
@@ -54,7 +55,7 @@
                     <h4>Income</h4>Large range in annual income. $18,000 and above.
                 </li>
                 <li>
-                    <h4>Motivation</h4>To plan ahead for vacation activites.
+                    <h4>Motivation</h4>To plan ahead for vacation activties.
                 </li>
             </ul>
         </section>
