scripte rentalTable.js console json

--- a/lesson13/rentals.html
+++ b/lesson13/rentals.html
@@ -138,6 +138,7 @@
 
     <script src="main.js/galleryload.js"></script>
     <script src="main.js/nav.js"></script>
+    <script src="main.js/rentalTable.js"></script>
 
 
 
