set up of reservation form

--- a/lesson13/rentals.html
+++ b/lesson13/rentals.html
@@ -129,8 +129,7 @@
     </main>
     <footer>
 
-        <p> &copy; 2020 | Heidi Fairhurst | Montana |<a class="links" href="https://hcfairhurst.github.io/"> Assignment
-                Portal</a>|
+        <p> &copy; 2020 | Heidi Fairhurst | Montana 
             <span id="todaysDate"></span>
         </p>
 
