--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -153,7 +153,7 @@
     </main>
     <footer>
 
-        <p> &copy; 2020 | Heidi Fairhurst | Montana 
+        <p> &copy; 2020 | Heidi Fairhurst |  <a href="https://openweathermap.org/">Weather Info Powered by: OpenWeather</a>
             <span id="todaysDate"></span>
         </p>
 
