tours page,content,images css tweaks

--- a/lesson13/confirmation.html
+++ b/lesson13/confirmation.html
@@ -31,7 +31,7 @@
 
             </ul>
         </nav>
-        <div class="top">
+        <div class="icon">
             <img src="images/motorcycle.png" alt="green scooter">
 
             <section class="headings">
@@ -44,10 +44,10 @@
 
 
 
-    <main>
-        <h1> &#127881; THANKS!! </h1>
+    <main class="confirmation">
+        <h2> &#10004; Your Reservation has been confirmed </h2>
         <p> &#10024;We Have Recieved Your Reservation  </p>
-        <p>Please not that we require a 50$ security deposit.
+        <p>Please not that we require a 50$ security deposit.<br>
             Please contact us directly with your deposit information.
         </p>
 
