--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -31,12 +31,12 @@
 
             </ul>
         </nav>
-        <div class="top">
+        <div class="icon">
             <img src="images/motorcycle.png" alt="green scooter">
 
             <section class="headings">
                 <h1> Scoots.com </h1>
-                <div>Get rolling on your next Adventure</div>
+                <div>The Best Way To See Cozumel</div>
         </div>
 
         </section>
@@ -70,7 +70,7 @@
 
 
             <section class="section2">
-                <h2>Call to Action</h2>
+                <h2>Get rolling on your next Adventure! </h2>
                 
                 <div class="contentbox"><span id="high"> </span></div>
                 <!--temp-->
@@ -128,7 +128,7 @@
                     &#9993; scoots.gmail.org
                 </p>
             </div>
-            <div class="map"><iframe src="https://www.google.com/maps/d/embed?mid=1nZ3H7xmY2uBa7wcgVUzusIIB0Z7fufLC" width="250" height="200"></iframe>
+            <div class="map"><img src="/lesson13/images/birdeye.jpg" alt="birds eye view of island">
                  <div class="social-media">
                 <a href="https://www.facebook.com">
                     <img class="socialmedia" src="/lesson11/siteimages/facebook_circle_294710.png" alt="FB logo"></a>
