--- a/lesson13/rentals.html
+++ b/lesson13/rentals.html
@@ -31,7 +31,7 @@
 
             </ul>
         </nav>
-        <div class="top">
+        <div class="icon">
             <img src="images/motorcycle.png" alt="green scooter">
      <section class="headings">
                 <h1> Scoots.com </h1>
@@ -80,7 +80,7 @@
             </figure>
 
         </div>
-        <section class="rental-table">
+        <section class="section3">
             
             <table class="flat-table">
                 <tbody>
