fixed json file names

--- a/lesson13/rentals.html
+++ b/lesson13/rentals.html
@@ -100,7 +100,7 @@
                         <td><b>Half Day</b></td>
                         <td><b>Full Day</b></td>
                     </tr>
-                    <tr id="row"></tr>
+                    <tr colspan="3"id="row"></tr>
                         
                     <tr id="column"></tr>
                     
