start of contact

--- a/lesson13/tours.html
+++ b/lesson13/tours.html
@@ -65,7 +65,7 @@
                Rent a Jeep for a full day to explore this area.
         </p>
     </section>
-    <section id="third-sec">
+    <section>
         <h2>Punta Molas</h2>
         
         
