--- a/lesson13/tours.html
+++ b/lesson13/tours.html
@@ -22,10 +22,10 @@
         <nav>
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="rentals.html">Rentals</a></li>
                 <li><a href="reservation.html">Reservation</a></li>
-                <li><a href="tours.html">Tours</a></li>
+                <li class="active"><a href="tours.html">Tours</a></li>
                 <li><a href="contact.html">Contact</a></li>
 
 
