created page to check asseccability debugged index.html

--- a/lesson13/contact.html
+++ b/lesson13/contact.html
@@ -86,7 +86,7 @@
 <div>
     <form method="get" action="confirmation.html">
         <fieldset>
-            <legend>Email US</legend>
+            <legend>Email Us</legend>
             <label class="top"> Full name* <input type="text" name="fullname" required pattern="[A-Za-z].{4,}"
                     placeholder="First Last"></label>
             
