--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -49,8 +49,12 @@
             <div class="rentalSum">
                 <img src="/lesson13/images/collage.jpg" alt="collage of ATV's">
                 <h2>We Offer</h2>
+                <h3>Jeep Rentals</h3>
+                <ul>
+                   <li> 4-door Jeep Wrangler - manual with A/C - 5 people max</li>
+                   <li> 2-door Jeep Wrangler - open air - manual - 4 people max </li>
+               </ul>
                 <h3>Honda Motor Scooters</h3>
-                
                 <ul>
                      <li> Honda Metropolitan (49cc) - 1 person</li>
                     <li> Honda Dio (110cc) - 2 person</li>
@@ -58,20 +62,10 @@
                     <li> ATV Side-by-Side</li>
                     <li> Honda Pioneer 1000</li>
                 </ul>
-                    <h3>Jeep Rentals</h3>
-                 <ul>
-                    <li> 4-door Jeep Wrangler - manual with A/C - 5 people max</li>
-                    <li> 2-door Jeep Wrangler - open air - manual - 4 people max </li>
-                </ul>
+                   
             </div>
 
-
-
-
-
-
-
-            <section class="section2">
+  <section class="section2">
                 <h2>Get rolling on your next Adventure! </h2>
 
                 <div class="contentbox"><span id="high"> </span></div>
@@ -119,7 +113,7 @@
             </section>
         </section>
         <section class="section3">
-            <div class="grid" id="yellow">
+            <div class="grid">
                 <section>
 
                     <h2> Playa del Carmen</h2>
@@ -130,7 +124,7 @@
 
                     <p>&#x1F4CD;Playa del Carmen-Cozumel
                         Ferry docking el Centro de Cozumel
-                        <p>&#9742; 111.222.3333<br>
+                        <p>&#9742; +52 987 654 3210<br>
                             &#9993; scootsferry.gmail.org
                         </p>
 
@@ -163,7 +157,7 @@
 
                     <p>&#x1F4CD;Terminal Puerta Maya Further South
                         <br> Cozumel, Mexico 83263</p>
-                    <p>&#9742; 111.222.3333<br>
+                    <p>&#9742; +52 123 456 7890<br>
                         &#9993; scoots.gmail.org
                     </p>
 
@@ -179,8 +173,7 @@
     </main>
     <footer>
 
-        <p> &copy; 2020 | Heidi Fairhurst | <a href="https://openweathermap.org/">Weather Info Powered by:
-                OpenWeather</a>
+        <p> &copy; 2020 | Heidi Fairhurst | <a href="reference.html">Source reference for Weather and Icon</a>
             <span id="todaysDate"></span>
         </p>
 
