--- a/lesson13/reservation.html
+++ b/lesson13/reservation.html
@@ -36,7 +36,7 @@
 
             <section class="headings">
                 <h1> Scoots.com </h1>
-                <div>Get rolling on your next Adventure</div>
+                <div>The Best Way To See Cozumel</div>
         </div>
 
         </section>
@@ -48,20 +48,19 @@
         
         <div class="agreement">
             <h2>Rental Agreement and Reservation form</h2>
-            <h3>&#9889; Please Read Through Our Requirments</h3>
-            <li>
-                <ul>A $50 security deposit is required to confirm reservations.</ul>
-                <ul>A valid drivers license is required in hand at time of rental.</ul>
-                <ul>No one under 12 years of age are allowed to ride on the scooters.</ul>
-                <ul>Fuel charge not included.</ul>
-                <ul>Unlimited mileage.</ul>
-                <ul>Liability insurance is free of charge.</ul>
-                <ul>Reservations rate requires 24 hour prior notification.</ul>
-                <ul>Free delivery to Cozumel hotel, Airbnb, or private residence for 2+ day rentals.</ul>
-                <ul>Payment via Google Pay, cash, credit card, debit card, or PayPal.</ul>
-                <ul>Rentals may be returned to either location.</ul>
-
-            </li>
+            <h3>Please Read Through Our Requirements:</h3>
+            <ul>
+                <li>  A $50 security deposit is required to confirm reservations.</li>
+                <li>  A valid drivers license is required in hand at time of rental.</li>
+                <li> No one under 12 years of age are allowed to ride on the scooters.</li>
+                <li>  Fuel charge not included.</li>
+                <li>  Unlimited mileage.</li>
+                <li>  Liability insurance is free of charge.</li>
+                <li> Reservations rate requires 24 hour prior notification.</li>
+                <li>  Free delivery to Cozumel hotel, Airbnb, or private residence for 2+ day rentals.</li>
+                <li> Payment via Google Pay, cash, credit card, debit card, or PayPal.</li>
+                <li>  Rentals may be returned to either location.</li>
+         </ul>
         </div>
         <form method="get" action="confirmation.html">
             <fieldset>
