--- a/lesson13/tours.html
+++ b/lesson13/tours.html
@@ -36,7 +36,7 @@
 
             <section class="headings">
                 <h1> Scoots.com </h1>
-                <div>Get rolling on your next Adventure</div>
+                <div>The Best Way To See Cozumel</div>
         </div>
 
         </section>
