--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -24,9 +24,9 @@
                 <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="rentals.html">Rentals</a></li>
-                <li><a href="reservation.html">Reservation</a></li>
-                <li><a href="tours.html">Tours</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="reservation.html">Book Now</a></li>
+                <li><a href="tours.html">Explore</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
 
 
             </ul>
@@ -35,10 +35,21 @@
             <img src="images/motorcycle.png" alt="green scooter">
 
             <section class="headings">
-                <h1> Scoots.com </h1>
-                <div>The Best Way To See Cozumel</div>
+                <h1>Scoots.com </h1>
+                <div>Jeep, ATV, Scooter Rentals</div>
+              
         </section>
+       
     </div>
+    <section class="banner">
+        <picture class="photoA">
+            <source media="(min-width: 250px) and (max-width: 500px)" srcset="/lesson13/images/banner1000.jpg">
+            <source media="(min-width: 501px) and (max-width: 799px)" srcset="/lesson13/images/banner1500.jpg">
+            <source media="(min-width: 800px)" srcset="/lesson13/images/banner2000.jpg">
+            <img id="heroimg" src="/lesson13/images/banner2000.jpg" alt="green rolling hills">
+        </picture>
+        <div class="title"><h6>The Best Way To See Cozumel</h6></div>
+    </section>
     </header>
 
 
@@ -112,7 +123,7 @@
 
             </section>
         </section>
-        <section class="section3">
+        <section class="gallery">
             <div class="grid">
                 <section>
 
