--- a/lesson13/confirmation.html
+++ b/lesson13/confirmation.html
@@ -24,9 +24,9 @@
                 <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="rentals.html">Rentals</a></li>
-                <li class="active"><a href="reservation.html">Reservation</a></li>
-                <li><a href="tours.html">Tours</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="reservation.html">Book Now</a></li>
+                <li><a href="tours.html">Explore</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
 
 
             </ul>
