--- a/lesson13/reservation.html
+++ b/lesson13/reservation.html
@@ -24,9 +24,9 @@
                 <li><a href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="rentals.html">Rentals</a></li>
-                <li class="active"><a href="reservation.html">Reservation</a></li>
-                <li><a href="tours.html">Tours</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="reservation.html">Book Now</a></li>
+                <li><a href="tours.html">Explore</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
 
 
             </ul>
@@ -37,8 +37,16 @@
             <section class="headings">
                 <h1> Scoots.com </h1>
                 <div>The Best Way To See Cozumel</div>
-        </div>
-
+        </section>
+    </div>
+        <section class="banner">
+            <picture class="photoA">
+                <source media="(min-width: 250px) and (max-width: 500px)" srcset="/lesson13/images/banner1000.jpg">
+                <source media="(min-width: 501px) and (max-width: 799px)" srcset="/lesson13/images/banner1500.jpg">
+                <source media="(min-width: 800px)" srcset="/lesson13/images/banner2000.jpg">
+                <img id="heroimg" src="/lesson13/images/banner2000.jpg" alt="green rolling hills">
+            </picture>
+            <div class="title"><h5>Reserve Adventure</h5></div>
         </section>
     </header>
 
