--- a/lesson13/confirmation.html
+++ b/lesson13/confirmation.html
@@ -57,10 +57,11 @@
 </main>
 <footer>
 
-    <p> &copy; 2020 | Heidi Fairhurst | Montana 
+    <p> &copy; 2020 | Heidi Fairhurst | <a href="reference.html">Source reference for Weather and Icon</a>
         <span id="todaysDate"></span>
     </p>
 
+    
 </footer>
 
 <script src="main.js/nav.js"></script>
