--- a/lesson13/contact.html
+++ b/lesson13/contact.html
@@ -127,7 +127,7 @@
     </main>
     <footer>
     
-        <p> &copy; 2020 | Heidi Fairhurst | Montana 
+        <p> &copy; 2020 | Heidi Fairhurst | <a href="reference.html">Source reference for Weather and Icon</a>
             <span id="todaysDate"></span>
         </p>
     
