debug contact html

--- a/lesson13/contact.html
+++ b/lesson13/contact.html
@@ -38,6 +38,7 @@
             <section class="headings">
                 <h1> Scoots.com </h1>
                 <div>The Best Way to See Cozumel</div>
+                </section>
         </div>
         <section class="banner">
             <picture class="photoA">
