--- a/lesson13/reservation.html
+++ b/lesson13/reservation.html
@@ -167,8 +167,8 @@
                 <label class="top"> Rental Date <input type="date" name="date"></label>
                 <!--Storm Type Drop down datalist -->
                 <label class="top">Pick Up Location:</label>
-                <input type="text" name="location" list="locationlist" placeholder="  click to select">
-                <datalist id="locationlist">
+                <input type="text" name="location" list="location" placeholder="  click to select">
+                <datalist id="location">
                     <option value="Terminal Puerta Maya">
                     <option value="Cozumel Ferry dock">
 
@@ -200,7 +200,7 @@
                         
                 </datalist>
                 <label class="top">Drop Off Time:</label>
-                <input type="time" id="appt" name="appt">
+                <input type="time" id="drop" name="off">
 
                 <!--Select Drop down -->
                 <label class="top">*Optional</label>
