remove placeholder text

--- a/lesson13/rentals.html
+++ b/lesson13/rentals.html
@@ -93,33 +93,33 @@
             <div class="grid">
 
                 <figure>
-                    <img src="https://via.placeholder.com/400x200?text=Placeholder" data-src="images/metro.jpg"
+                    <img src="https://via.placeholder.com/400x200?" data-src="images/metro.jpg"
                         alt="Honda Metro">
                     <figcaption>Honda Metro</figcaption>
                 </figure>
                 <figure>
-                    <img src="https://via.placeholder.com/400x200?text=Placeholder" data-src="images/dios.jpg"
+                    <img src="https://via.placeholder.com/400x200?" data-src="images/dios.jpg"
                         alt="Honda Dios">
                     <figcaption>Honda Dios</figcaption>
                 </figure>
                 <figure>
-                    <img src="https://via.placeholder.com/400x200?text=Placeholder" data-src="images/PCX150.jpg"
+                    <img src="https://via.placeholder.com/400x200?" data-src="images/PCX150.jpg"
                         alt="Honda PCX 150">
                     <figcaption>Honda PCX 150</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="https://via.placeholder.com/400x200?text=Placeholder" data-src="images/pioneerhonda.jpg"
+                    <img src="https://via.placeholder.com/400x200?" data-src="images/pioneerhonda.jpg"
                         alt="Honda Pioneer">
                     <figcaption>Honda Pioneer</figcaption>
                 </figure>
                 <figure>
-                    <img src="https://via.placeholder.com/400x200?text=Placeholder" data-src="images/2doorjeep.jpeg"
+                    <img src="https://via.placeholder.com/400x200?" data-src="images/2doorjeep.jpeg"
                         alt="two door Jeep">
                     <figcaption>2 Door Jeep</figcaption>
                 </figure>
                 <figure>
-                    <img src="https://via.placeholder.com/400x200?text=Placeholder" data-src="images/4doorjeep.jpg"
+                    <img src="https://via.placeholder.com/400x200?" data-src="images/4doorjeep.jpg"
                         alt="4 Door Jeep">
                     <figcaption>4 Door Jeep</figcaption>
                 </figure>
