--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -58,7 +58,7 @@
 
         <section class="section1">
             <div class="rentalSum">
-                <img src="/lesson13/images/collage.jpg" alt="collage of ATV's">
+                <img src="/lesson13/images/collage.jpf" alt="collage of ATV's">
                 <h2>We Offer</h2>
                 <h3>Jeep Rentals</h3>
                 <ul>
@@ -144,7 +144,7 @@
                     <h2>Two Locations</h2>
 
 
-                    <img src="/lesson13/images/picmap.jpg" alt="birds eye view of island">
+                    <img src="/lesson13/images/picmap.jpf" alt="birds eye view of island">
 
                     <div id="social-media">
                         <a href="https://www.facebook.com">
