--- a/lesson13/tours.html
+++ b/lesson13/tours.html
@@ -79,7 +79,7 @@
                 <h2>Punta Molas</h2>
 
 
-                <img src="/lesson13/images/cozumelbeachroad500.jpg" alt="Jeeps driving on the beach">
+                <img src="/lesson13/images/cozumelbeachroad500.jpf" alt="Jeeps driving on the beach">
                 <p>This area is only accesible with a four wheel drive vehicle, but it is worth it. Check out the
                     abandoned
                     lighthouse of Punta Molas. Then off-road around the sand dunes and dirt trails. Discover secluded
