--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -43,10 +43,10 @@
     </div>
     <section class="banner">
         <picture class="photoA">
-            <source media="(min-width: 250px) and (max-width: 500px)" srcset="/lesson13/images/banner900.jpg">
+            <source media="(min-width: 250px) and (max-width: 500px)" srcset="/lesson13/images/banner900.jpf">
             <source media="(min-width: 501px) and (max-width: 799px)" srcset="/lesson13/images/banner1500.jpf">
-            <source media="(min-width: 800px)" srcset="/lesson13/images/banner2000.jpg">
-            <img id="heroimg" src="/lesson13/images/banner2000.jpg" alt="green rolling hills">
+            <source media="(min-width: 800px)" srcset="/lesson13/images/banner2000.jpf">
+            <img id="heroimg" src="/lesson13/images/banner2000.jpf" alt="green rolling hills">
         </picture>
         <div class="title"><h6>The Best Way To See Cozumel</h6></div>
     </section>
