switch back to jpg

--- a/lesson13/reservation.html
+++ b/lesson13/reservation.html
@@ -44,7 +44,7 @@
                 <source media="(min-width: 250px) and (max-width: 500px)" srcset="/lesson13/images/banner900.jpf">
                 <source media="(min-width: 501px) and (max-width: 799px)" srcset="/lesson13/images/banner1500.jpf">
                 <source media="(min-width: 800px)" srcset="/lesson13/images/banner2000.jpf">
-                <img id="heroimg" src="/lesson13/images/banner2000.jpf" alt="green rolling hills">
+                <img id="heroimg" src="/lesson13/images/banner2000.jpg" alt="green rolling hills">
             </picture>
             <div class="title"><h5>Reserve Adventure</h5></div>
         </section>
