--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -144,7 +144,7 @@
                     <h2>Two Locations</h2>
 
 
-                    <img src="/lesson13/images/picmap.jpf" alt="birds eye view of island">
+                    <img src="/lesson13/images/picmap.jpg" alt="birds eye view of island">
 
                     <div id="social-media">
                         <a href="https://www.facebook.com">
