--- a/lesson13/reservation.html
+++ b/lesson13/reservation.html
@@ -41,9 +41,9 @@
     </div>
         <section class="banner">
             <picture class="photoA">
-                <source media="(min-width: 250px) and (max-width: 500px)" srcset="/lesson13/images/banner900.jpf">
-                <source media="(min-width: 501px) and (max-width: 799px)" srcset="/lesson13/images/banner1100.jpf">
-                <source media="(min-width: 800px)" srcset="/lesson13/images/banner2000.jpf">
+                <source media="(min-width: 250px) and (max-width: 500px)" srcset="/lesson13/images/banner900.jpg">
+                <source media="(min-width: 501px) and (max-width: 799px)" srcset="/lesson13/images/banner1100.jpg">
+                <source media="(min-width: 800px)" srcset="/lesson13/images/banner2000.jpg">
                 <img id="heroimg" src="/lesson13/images/banner2000.jpg" alt="green rolling hills">
             </picture>
             <div class="title"><h5>Reserve Adventure</h5></div>
