--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -124,7 +124,7 @@
             </section>
         </section>
         <section class="gallery">
-            <div class="grid">
+            <div class="grid"id="yellow">
                 <section>
 
                     <h2> Playa del Carmen</h2>
