start of new review page

--- a/lesson12/typography.html
+++ b/lesson12/typography.html
@@ -66,7 +66,7 @@
                 <td>Buttons/Nav, Header </td>
                 <td>Open Sans</td>
                 <td>Light-Bolded</td>
-                <td>Normal</td>
+                <td id="dark">Normal</td>
                 <td id="sample3">Sample</td>
             </tr>
         </table>
